--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
+    "mobx": "^5.15.6",
+    "mobx-react-lite": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
