--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=studentnotes.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
