--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,13 +12,16 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
+    "final-form": "^4.20.1",
     "mobx": "^5.15.6",
     "mobx-react-lite": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-final-form": "^6.5.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-toastify": "^6.2.0",
+    "revalidate": "^1.2.0",
     "semantic-ui-react": "^1.1.0",
     "typescript": "^3.7.5"
   },
@@ -44,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/revalidate": "^1.1.2",
     "@types/uuid": "^8.3.0"
   }
 }
