--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=studentnotes;Uid=appuser;Pwd=password;"
+    "DefaultConnection": "Server=localhost;Database=master;Trusted_Connection=True;"
   },
+  
   
 
     "TokenKey": "super secret key"
