prepare to build and publish

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,13 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=studentnotes;Trusted_Connection=True;"
+    "DefaultConnection": "Server=tcp:studentnotes.database.windows.net,1433;Initial Catalog=studentnotes;Persist Security Info=False;User ID=appuser;Password=StudentNotes*10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  
-  
 
-    "TokenKey": "super secret key"
+  "TokenKey": "SuperSecretKeySuperSecretKeySuperSecretKeySuperSecretKey"
 ,
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
