undo - prepare to build and publish

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:studentnotes.database.windows.net,1433;Initial Catalog=studentnotes;Persist Security Info=False;User ID=appuser;Password=StudentNotes*10;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost;Database=studentnotes;Trusted_Connection=True;"
   },
 
   "TokenKey": "SuperSecretKeySuperSecretKeySuperSecretKeySuperSecretKey"
